# kairix_mind

./: .gitignore  Makefile  default.env  docker-compose.yml  main.py  pyproject.toml
src/kairix/: __init__.py  types.py
src/kairix/ui/: functions.py  memory_pipeline.py
tests/: test_functions.py
